--- a/EduAndCerti/Base.lproj/Main.storyboard
+++ b/EduAndCerti/Base.lproj/Main.storyboard
@@ -116,21 +116,29 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o2T-mi-kDg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2134" y="394"/>
+            <point key="canvasLocation" x="2398" y="-1194"/>
         </scene>
         <!--카테고리-->
         <scene sceneID="ei4-BP-cLH">
             <objects>
-                <tableViewController id="eRp-PT-RcW" sceneMemberID="viewController">
+                <tableViewController id="eRp-PT-RcW" customClass="CategoryViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Bwv-Pf-OTS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="76J-ch-tvM">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="CategoryCell" textLabel="bcl-Uf-WPh" style="IBUITableViewCellStyleDefault" id="76J-ch-tvM">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="76J-ch-tvM" id="nbe-Sq-eOk">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bcl-Uf-WPh">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -143,7 +151,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eBW-md-lev" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1169" y="-1983"/>
+            <point key="canvasLocation" x="1017" y="-1975"/>
         </scene>
         <!--교육자료실-->
         <scene sceneID="HSH-dF-ErX">
@@ -188,7 +196,7 @@
             <objects>
                 <navigationController id="OKF-Jv-TY4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="추천자료" id="Hax-uL-54G"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gys-uN-YR9">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gys-uN-YR9" customClass="CustomNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -258,10 +266,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="81X-kG-MDU">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchCell" textLabel="M4S-qC-vIU" style="IBUITableViewCellStyleDefault" id="81X-kG-MDU">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="81X-kG-MDU" id="N0b-pY-gAv">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M4S-qC-vIU">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -353,7 +369,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="94b-L9-FHh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-657" y="-1104"/>
+            <point key="canvasLocation" x="-1197" y="-1076"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yci-fF-5Ru">
@@ -375,7 +391,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LjF-zO-DTD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-664" y="-368"/>
+            <point key="canvasLocation" x="-1136" y="1864"/>
         </scene>
         <!--설정-->
         <scene sceneID="N2f-CQ-0C9">
@@ -586,7 +602,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HSN-TB-88Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3536" y="-1854"/>
+            <point key="canvasLocation" x="2520" y="-1998"/>
         </scene>
         <!--인기자료-->
         <scene sceneID="p1G-85-k5w">
@@ -706,7 +722,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D1L-PM-CbC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2751" y="-1854"/>
+            <point key="canvasLocation" x="1791" y="-1998"/>
         </scene>
         <!--검색-->
         <scene sceneID="zmG-pk-45Y">
@@ -743,7 +759,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ax6-ZF-PDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="483" y="-1983"/>
+            <point key="canvasLocation" x="187" y="-1975"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
